Fixed the x-frame problem which generated Firefox errors when opening an external webpage from a frame.
Needed to add target="_blank" to all a href commands.

--- a/homeframe.html
+++ b/homeframe.html
@@ -7,9 +7,9 @@
 
 <img class="floating" src="pictures/Alos-Ferrer2.jpg" width=20% alt="Carlos Alos-Ferrer">
       <h1>About me</h1>
-      <p>I am an interdisciplinary researcher between (micro)economics, psychology, and (decision) neuroscience, a <a href="https://nomisfoundation.ch/">NOMIS</a> 
-Professor of Decision Theory and Neuroeconomic Theory at the <a href="https://www.zne.uzh.ch/en.html">Zurich Center for Neuroeconomics</a>,
-and Co-Editor in Chief of the <a href="https://www.journals.elsevier.com/journal-of-economic-psychology">Journal of Economic Psychology.</a>
+      <p>I am an interdisciplinary researcher between (micro)economics, psychology, and (decision) neuroscience, a <a href="https://nomisfoundation.ch/" target="_blank">NOMIS</a> 
+Professor of Decision Theory and Neuroeconomic Theory at the <a href="https://www.zne.uzh.ch/en.html" target="_blank">Zurich Center for Neuroeconomics</a>,
+and Co-Editor in Chief of the <a href="https://www.journals.elsevier.com/journal-of-economic-psychology" target="_blank">Journal of Economic Psychology.</a>
 I have also been full professor of Microeconomics at the Universities of Cologne and Konstanz, associate professor at the 
 Universities of Vienna and Salamanca, and Visiting Professor at New York University-Abu Dhabi. I am from Spain, speak German fluently, and currently live in Switzerland.</p>  
 
@@ -23,12 +23,12 @@ Universities of Vienna and Salamanca, and Visiting Professor at New York Univers
 <ul class="paperlist">
 <li class="paper"><em>Part-Time Bayesians:  Incentives and Behavioral
 Heterogeneity in Belief Updating</em>, C. Al&oacute;s-Ferrer and M. Garagnani, <strong>Management Science</strong>, forthcoming. <a href="files/BayesReinforceMS2022.pdf">Accepted Paper.</a></li>
-<li class="paper"><em>Generous with individuals and Selfish to the Masses</em>, C. Al&oacute;s-Ferrer, J. Garc&iacute;a-Segarra, and A. Ritschel, <strong>Nature Human Behavior</strong>, 2022. <a href="https://rdcu.be/cqPad">SharedIt Link.</a></li>
-<li class="paper"><em>Time Will Tell: Recovering Preferences When Choices Are Noisy</em>, C. Al&oacute;s-Ferrer, E. Fehr, and N. Netzer. <strong>Journal of Political Economy</strong>, 2021. <a href="https://doi.org/10.1086/713732">Journal Link.</a></li>
+<li class="paper"><em>Generous with individuals and Selfish to the Masses</em>, C. Al&oacute;s-Ferrer, J. Garc&iacute;a-Segarra, and A. Ritschel, <strong>Nature Human Behavior</strong>, 2022. <a href="https://rdcu.be/cqPad" target="_blank">SharedIt Link.</a></li>
+<li class="paper"><em>Time Will Tell: Recovering Preferences When Choices Are Noisy</em>, C. Al&oacute;s-Ferrer, E. Fehr, and N. Netzer. <strong>Journal of Political Economy</strong>, 2021. <a href="https://doi.org/10.1086/713732" target="_blank">Journal Link.</a></li>
 <li class="paper"><em>True to Which Self? Lay Rationalism and Decision Satisfaction in Self-Control Conflicts</em>, M.D. Kokkoris, E. Hoelzl,
- and C. Al&oacute;s-Ferrer, <strong>Journal of Personality and Social Psychology</strong>, 2019. <a href="https://doi.org/10.1037/pspp0000242">APA Link.</a></li>
+ and C. Al&oacute;s-Ferrer, <strong>Journal of Personality and Social Psychology</strong>, 2019. <a href="https://doi.org/10.1037/pspp0000242" target="_blank">APA Link.</a></li>
 <li class="paper"><em>A Review Essay on Social Neuroscience: Can Research on the Social Brain and Economics Inform Each Other?</em>,
-  C. Al&oacute;s-Ferrer, <strong>Journal of Economic Literature</strong>, 2018. <a href="https://www.aeaweb.org/articles?id=10.1257/jel.20171370">Journal Link.</a></li>
+  C. Al&oacute;s-Ferrer, <strong>Journal of Economic Literature</strong>, 2018. <a href="https://www.aeaweb.org/articles?id=10.1257/jel.20171370" target="_blank">Journal Link.</a></li>
 </ul>
 
 </body>
