Added new publication: Excess Payoff Dynamics

--- a/papersframe.html
+++ b/papersframe.html
@@ -35,6 +35,12 @@
 		</tr>
 		<tr>
 			<td>
+			<i>Excess Payoff Dynamics in Games</i>, Carlos Al&oacute;s-Ferrer and Josef Hofbauer, 
+			<strong>Journal of Economic Theory</strong>, forthcoming.
+			</td><td><a href="https://doi.org/10.1016/j.jet.2022.105464" target="_blank">Journal Link</a></td>
+		</tr>
+		<tr>
+			<td>
 			<i>Strength of Preference and Decisions Under Risk</i>, Carlos Al&oacute;s-Ferrer and Michele Garagnani, 
 			<strong>Journal of Risk and Uncertainty</strong>, forthcoming.
 			</td><td class="linkcell"><a href="https://rdcu.be/cObNI" target="_blank">SharedIt Link</a>
