Fixed typos in the News frame.

--- a/newsframe.html
+++ b/newsframe.html
@@ -14,8 +14,8 @@
 		    
 <table class="papertable">
 	<tbody>
-		<tr><td class="datecell">02.08.2022</td>
-			<td width=70%><i>Invited Talk at the the 
+		<tr><td class="datecell">02.08.2022<br>14:00 CET</td>
+			<td width=70%><i>Invited Talk at the 
 			<a href="https://sites.google.com/view/debseminar/home" target="_blank">Decision Experience and Behavior (DEB) Seminar</a>:</i> 
 			Process Data and Economic Decisions: The Good, the Bad, and the Na&iuml;ve. 
 			</td><td class="linkcell"><a href="https://us02web.zoom.us/j/83752367110"  target="_blank">Zoom link</a>
@@ -29,7 +29,7 @@
 			</td>
 		</tr>
 		<tr><td class="datecell">08.07.2022</td>
-			<td width=70%><i>Plenary Talk at the the <a href="https://leg2020.imtlucca.it/invited-speakers" target="_blank">Learning, Evolution, and Games (LEG2020-22) Conference</a>:</i> 
+			<td width=70%><i>Plenary Talk at the <a href="https://leg2020.imtlucca.it/invited-speakers" target="_blank">Learning, Evolution, and Games (LEG2020-22) Conference</a>:</i> 
 			Efficient Networks.
 			</td><td class="linkcell"><a href="https://leg2020.imtlucca.it/program"  target="_blank">Conference Program</a>
 			</td>
