Minor tweaks to css and index
Changed color of title bar.
Added title and meta.
Changed pointer behavior of side bar.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
  <!DOCTYPE html>
 <html>
 <head>
+<title>Carlos Al&oacute;s-Ferrer</title>
+<meta name="Keywords" content="Alos-Ferrer, Neuroeconomics, ZNE, Economic Psychology, JOEP, Microeconomics, Decision making, Game Theory, Response Times">
 <link rel="stylesheet" href="blocks.css">
 </head>
 <body>
@@ -40,7 +42,7 @@
       <a href="https://www.amazon.com/Theory-Extensive-Form-Games-Springer/dp/3662499428/"><img src="pictures/BookTEF.jpg" width=100% alt="The Theory of Extensive Form Games"></a>
     
     	<p></p>
-		<a href="https://www.comunitatvalenciana.com/en/home"><img src="pictures/LogoCV.png" width=100% alt="My region"></a>    
+	 <a href="https://www.comunitatvalenciana.com/en/home"><img src="pictures/LogoCV.png" width=100% alt="My region"></a>
     </div>
   </div>  
   
