Fixed incorrect link

--- a/homeframe.html
+++ b/homeframe.html
@@ -18,7 +18,7 @@ Universities of Vienna and Salamanca, and Visiting Professor at New York Univers
 
        <h2>5 selected publications from the last 5 years</h2>
 
-<p><i><a href="publications.html">See all publications</a></i></p>       
+<p><i><a href="papersframe.html" target="middle frame">See all publications</a></i></p>       
        
 <ul class="paperlist">
 <li class="paper"><em>Part-Time Bayesians:  Incentives and Behavioral
