Updated JRU publication in paper list and CV

--- a/papersframe.html
+++ b/papersframe.html
@@ -41,13 +41,6 @@
 		</tr>
 		<tr>
 			<td>
-			<i>Strength of Preference and Decisions Under Risk</i>, Carlos Al&oacute;s-Ferrer and Michele Garagnani, 
-			<strong>Journal of Risk and Uncertainty</strong>, forthcoming.
-			</td><td class="linkcell"><a href="https://rdcu.be/cObNI" target="_blank">SharedIt Link</a>
-			<br><a href="https://doi.org/10.1007/s11166-022-09381-0" target="_blank">Journal Link</a></td>
-		</tr>
-		<tr>
-			<td>
 			<i>Does Choice Change Preferences? An Incentivized Test of the Mere Choice Effect</i>, 
 			Carlos Al&oacute;s-Ferrer and Georg D. Granic, <strong>Experimental Economics</strong>, forthcoming.
          </td><td class="linkcell"><a href="https://rdcu.be/ct6YY" target="_blank">SharedIt Link</a>
@@ -60,6 +53,13 @@
 			<strong>Journal of Economic Behavior and Organization</strong>, 200, August 2022, pp. 55-66.
 			</td><td class="linkcell"><a href="https://doi.org/10.1016/j.jebo.2022.05.015" target="_blank">Journal Link</a>
 			</td>
+		</tr>
+		<tr>
+			<td>
+			<i>Strength of Preference and Decisions Under Risk</i>, Carlos Al&oacute;s-Ferrer and Michele Garagnani, 
+			<strong>Journal of Risk and Uncertainty</strong>, 64 (3), June 2022, pp. 309-329.
+			</td><td class="linkcell"><a href="https://rdcu.be/cObNI" target="_blank">SharedIt Link</a>
+			<br><a href="https://doi.org/10.1007/s11166-022-09381-0" target="_blank">Journal Link</a></td>
 		</tr>
    	<tr>
 			<td>
