Linked to Psychology Today blog

--- a/homeframe.html
+++ b/homeframe.html
@@ -14,7 +14,9 @@ I have also been full professor of Microeconomics at the Universities of Cologne
 Universities of Vienna and Salamanca, and Visiting Professor at New York University-Abu Dhabi. I am from Spain, speak German fluently, and currently live in Switzerland.</p>  
 
 <p>I am interested in how humans make economic decisions, ranging from decisions under risk to strategic decisions (game theory) and voting.
- My research methods include formal-analytical modelling of bounded rationality, behavioral experiments, and decision neuroscience ("neuroeconomics"). </p>
+ My research methods include formal-analytical modelling of bounded rationality, behavioral experiments, and decision neuroscience ("neuroeconomics"). 
+ I maintain a <a href="https://www.psychologytoday.com/intl/blog/decisions-and-the-brain">"Decisions and the Brain" blog at Psychology Today</a> and 
+ a <a href="http://alosferrer.wordpress.com">personal blog at Wordpress</a>.</p>
 
        <h2>5 selected publications from the last 5 years</h2>
 
