--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
        <li class="menuitem"><a href="files/CV-Alos-Ferrer.pdf" target="middle frame">CV</a>
        <li class="menuitem"><a href="papersframe.html" target="middle frame">Publications</a>
        <li class="menuitem"><a href="WPsframe.html" target="middle frame">Working Papers</a> 
-       <li class="menuitem"><a href="newsframe.html" target="middle frame">Press, Talks, News</a>     
-       <li class="menuitem"><img src="pictures/WordpressLogo.png" width=24px>&nbsp;<a href="http://alosferrer.wordpress.com">Blog</a>
+       <li class="menuitem"><a href="newsframe.html" target="middle frame">Press, Talks, News</a> 
+       <li class="menuitem"><img src="pictures/PT.png" width=24px>&nbsp;<a href="https://www.psychologytoday.com/us/blog/decisions-and-the-brain">Psychology Today</a>    
+       <li class="menuitem"><img src="pictures/WordpressLogo.png" width=24px>&nbsp;<a href="http://alosferrer.wordpress.com">Blog at WordPress</a>
        <li class="menuitem"><img src="pictures/GoogleScholarLogo.png" width=24px>&nbsp;<a href="https://scholar.google.com/citations?user=c45lelAAAAAJ&hl=en">Google Scholar<sup>®</sup></a></li>
        <li class="menuitem"><img src="pictures/ResearchGateLogo.png" width=24px>&nbsp;<a href="https://www.researchgate.net/profile/Carlos-Alos-Ferrer">Research Gate<sup>®</sup></a></li>
        <li class="menuitem"><img src="pictures/LinkedInLogo.png" width=24px>&nbsp;<a href="https://www.linkedin.com/in/alosferrer/">LinkedIn<sup>®</sup> Profile</a></li>
