--- a/newsframe.html
+++ b/newsframe.html
@@ -43,7 +43,7 @@
 	<tbody>
 		<tr><td class="datecell">01.07.2022</td>
 			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">PRESS:</b> Just posted in <a href="https://nadaesgratis.es/" target="_blank">Nada es Gratis</a>, the best-known Economics blog in Spanish:
-			My first post, <a href="https://nadaesgratis.es/admin/egoismo-eres-tu-robando-a-las-masas" target="_blank">Ego&iacute;smo eres t&uacute;: robando a las masas</a>, has been promoted to "Essential Topic."
+			 <a href="https://nadaesgratis.es/admin/egoismo-eres-tu-robando-a-las-masas" target="_blank">Ego&iacute;smo eres t&uacute;: robando a las masas</a>.
 			</td><td class="linkcell"><a href="https://nadaesgratis.es/admin/egoismo-eres-tu-robando-a-las-masas" target="_blank">Post</a>
 			</td>
 		</tr>
