Added transitivity WP

--- a/WPsframe.html
+++ b/WPsframe.html
@@ -21,9 +21,9 @@
 <table class="papertable">
 	<tbody>
 		<tr>
-			<td width=85%><i>Transitivity Violations: Only Noise?</i>, 
+			<td width=85%><i>Identifying Nontransitive Preferences</i>, 
 			Carlos Al&oacute;s-Ferrer, Ernst Fehr, and Michele Garagnani, last version: 2022.
-			</td><td class="linkcell"><i>In Progress</i>
+			</td><td class="linkcell"><a href="https://www.zora.uzh.ch/id/eprint/219280/" target="_blank">Working Paper</a>
 			</td>
 		</tr>
 		<tr>
