Updated News; added link to book series.

--- a/papersframe.html
+++ b/papersframe.html
@@ -14,7 +14,7 @@
 	<tbody>
 		<tr>
 			<td width=85%>The Theory of Extensive Form Games, 
-			Carlos Al&oacute;s-Ferrer and Klaus Ritzberger, <i>Springer Verlag: Monographs of the Game Theory Society</i>, 2016.
+			Carlos Al&oacute;s-Ferrer and Klaus Ritzberger, <i><a href="https://www.springer.com/series/8107" target="_blank">Springer Series in Game Theory</a> (Official Series of the Game Theory Society)</i>, 2016.
 			</td><td class="linkcell"><a href="https://link.springer.com/book/10.1007/978-3-662-49944-3" target="_blank">Springer Link</a>
 			<br><a href="https://www.amazon.com/Theory-Extensive-Form-Games-Springer/dp/3662499428/" target="_blank">Amazon</a>
 			<br><a href="https://doi.org/10.1257/jel.55.1.209" target="_blank">JEL Review</a>
