--- a/newsframe.html
+++ b/newsframe.html
@@ -10,23 +10,35 @@
 
 <p><i>(Since 2020)</i></p>
 
-<!--<h2>Upcoming</h2>
+<h2>Upcoming</h2>
 		    
 <table class="papertable">
 	<tbody>
-		
+		<tr><td class="datecell">15.11.2022<br>15:00 CET</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://sites.google.com/view/2021onlinescwseminars" target="_blank">Online Social Choice and Welfare Seminar</a>:</i> 
+			TBA. 
+			</td><td class="linkcell">
+			</td>
+		</tr>
 		</tbody>
-</table>-->
+</table>
 
 <h2>2022</h2>
 		    
 <table class="papertable">
 	<tbody>
+	<tr><td class="datecell">12.08.2022</td>
+			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">NEWS:</b> I have accepted the position of <a href="https://www.springer.com/series/8107/editors"  target="_blank"><b>Series Editor</b></a>
+			for <a href="https://www.springer.com/series/8107" target="_blank"><i>Springer Series in Game Theory</i></a>, the Official Book Series of the Game Theory Society.
+			</td><td class="linkcell"><a href="https://www.springer.com/series/8107" target="_blank">Series Link</a>
+			</td>
+		</tr>
 		<tr><td class="datecell">02.08.2022<br>14:00 CET</td>
 			<td width=70%><i>Invited Talk at the 
 			<a href="https://sites.google.com/view/debseminar/home" target="_blank">Decision Experience and Behavior (DEB) Seminar</a>:</i> 
 			Process Data and Economic Decisions: The Good, the Bad, and the Na&iuml;ve. 
-			</td><td class="linkcell">Recording in Youtube (Coming Soon).
+			</td><td class="linkcell"><a href="https://www.youtube.com/watch?v=cUz4LWUhX-I&t=1687s" target="_blank">YouTube Recording</a>
 			</td>
 		</tr>
 		<tr><td class="datecell">12.07.2022</td>
