Updated JET 2022 paper

--- a/papersframe.html
+++ b/papersframe.html
@@ -35,17 +35,17 @@
 		</tr>
 		<tr>
 			<td>
-			<i>Excess Payoff Dynamics in Games</i>, Carlos Al&oacute;s-Ferrer and Josef Hofbauer, 
-			<strong>Journal of Economic Theory</strong>, forthcoming.
-			</td><td><a href="https://doi.org/10.1016/j.jet.2022.105464" target="_blank">Journal Link</a></td>
-		</tr>
-		<tr>
-			<td>
 			<i>Does Choice Change Preferences? An Incentivized Test of the Mere Choice Effect</i>, 
 			Carlos Al&oacute;s-Ferrer and Georg D. Granic, <strong>Experimental Economics</strong>, forthcoming.
          </td><td class="linkcell"><a href="https://rdcu.be/ct6YY" target="_blank">SharedIt Link</a>
          <br><a href="https://doi.org/10.1007/s10683-021-09728-5" target="_blank">Journal Link</a>			
 			</td>
+		</tr>
+		<tr>
+			<td>
+			<i>Excess Payoff Dynamics in Games</i>, Carlos Al&oacute;s-Ferrer and Josef Hofbauer, 
+			<strong>Journal of Economic Theory</strong>, 204, September 2022, 105464.
+			</td><td><a href="https://doi.org/10.1016/j.jet.2022.105464" target="_blank">Journal Link</a></td>
 		</tr>
 		<tr>
 			<td>
