--- a/papersframe.html
+++ b/papersframe.html
@@ -430,8 +430,7 @@
 		</tr>
 		<tr>
 			<td><i>The Impact of Self-Control Depletion on Social Preferences in the Ultimatum Game</i>, 
-			Anja Achtziger, Carlos Al&oacute;s-Ferrer, and Alexander K. Wagner, <
-			strong>Journal of Economic Psychology</strong>, 53, April 2016, pp. 1-16.</td>
+			Anja Achtziger, Carlos Al&oacute;s-Ferrer, and Alexander K. Wagner, <strong>Journal of Economic Psychology</strong>, 53, April 2016, pp. 1-16.</td>
 		<td class="linkcell"><a href="https://doi.org/10.1016/j.joep.2015.12.005" target="_blank">Journal Link</a></td>
 		</tr>
 		<tr>
