Updated upcomign talks.

--- a/newsframe.html
+++ b/newsframe.html
@@ -22,6 +22,15 @@
 			</td>
 		</tr>
 		</tbody>
+		<tbody>
+		<tr><td class="datecell">29.09.2022<br>11:00 CET</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://www.parisschoolofeconomics.eu/en/research/academic-activity/seminars/behavior-seminar/" target="_blank">Behavior Seminar, Paris School of Economics</a>:</i> 
+			Learning Preferences from Response Times. 
+			</td><td class="linkcell">
+			</td>
+		</tr>
+		</tbody>
 </table>
 
 <h2>2022</h2>
