Updated papers and talks

--- a/newsframe.html
+++ b/newsframe.html
@@ -21,12 +21,10 @@
 			</td><td class="linkcell">
 			</td>
 		</tr>
-		</tbody>
-		<tbody>
-		<tr><td class="datecell">29.09.2022<br>11:00 CET</td>
+		<tr><td class="datecell">14.10.2022<br>14:45 CET</td>
 			<td width=70%><i>Invited Talk at the 
-			<a href="https://www.parisschoolofeconomics.eu/en/research/academic-activity/seminars/behavior-seminar/" target="_blank">Behavior Seminar, Paris School of Economics</a>:</i> 
-			Learning Preferences from Response Times. 
+			<a href="https://lnc2.dec.ens.fr/en/research/teams/human-reinforcement-learning/neuro-economics-seminar-series-12930" target="_blank">nEuro-economics Seminar, ENS Paris</a>:</i> 
+			The Neural Foundations of Behavioral Anomalies in Decisions Under Risk. 
 			</td><td class="linkcell">
 			</td>
 		</tr>
@@ -37,6 +35,13 @@
 		    
 <table class="papertable">
 	<tbody>
+			<tr><td class="datecell">29.09.2022<br>11:00 CET</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://www.parisschoolofeconomics.eu/en/research/academic-activity/seminars/behavior-seminar/" target="_blank">Behavior Seminar, Paris School of Economics</a>:</i> 
+			Learning Preferences from Response Times. 
+			</td><td class="linkcell">
+			</td>
+		</tr>
 	<tr><td class="datecell">12.08.2022</td>
 			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">NEWS:</b> I have accepted the position of <a href="https://www.springer.com/series/8107/editors"  target="_blank"><b>Series Editor</b></a>
 			for <a href="https://www.springer.com/series/8107" target="_blank"><i>Springer Series in Game Theory</i></a>, the Official Book Series of the Game Theory Society.
