--- a/papersframe.html
+++ b/papersframe.html
@@ -41,6 +41,13 @@
          <br><a href="https://doi.org/10.1007/s10683-021-09728-5" target="_blank">Journal Link</a>			
 			</td>
 		</tr>
+				<tr>
+			<td>
+			<i>Voting Under Time Pressure</i>, 
+			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Judgment and Decision Making</strong>, 17(5), September 2022, pp. 1072-1093.
+         </td><td class="linkcell"><a href="https://journal.sjdm.org/22/220527/jdm220527.pdf" target="_blank">Journal Link</a>			
+			</td>
+		</tr>
 		<tr>
 			<td>
 			<i>Excess Payoff Dynamics in Games</i>, Carlos Al&oacute;s-Ferrer and Josef Hofbauer, 
