Added links to seminar posters.

--- a/newsframe.html
+++ b/newsframe.html
@@ -25,7 +25,8 @@
 			<td width=70%><i>Invited Talk at the 
 			<a href="https://lnc2.dec.ens.fr/en/research/teams/human-reinforcement-learning/neuro-economics-seminar-series-12930" target="_blank">nEuro-economics Seminar, ENS Paris</a>:</i> 
 			The Neural Foundations of Behavioral Anomalies in Decisions Under Risk. 
-			</td><td class="linkcell">
+			</td><td class="linkcell"><a href="pictures/Paris-nEuroTalk2022.jpg" target="_blank">Announcement</a>
+			
 			</td>
 		</tr>
 		</tbody>
@@ -97,7 +98,7 @@
 		<tr><td class="datecell">31.05.2022</td>
 			<td width=70%><i>Invited Talk at the <a href="https://www.uni-bielefeld.de/zwe/imw/" target="_blank">University of Bielefeld</a> (Germany):</i> 
 			The Problem of Revealed Preference for Stochastic Choice Panels. 
-			</td><td class="linkcell"><a href="https://www.uni-bielefeld.de/fakultaeten/wirtschaftswissenschaften/einrichtungen/bigsem/profiles/economics/economics-seminar-(econom/Carlos-Alos-Ferrer.pdf" target="_blank">Announcement</a>
+			</td><td class="linkcell"><a href="pictures/SeminarBielefeld2022.jpg" target="_blank">Announcement</a>
 			</td>
 		</tr>
 		<tr><td class="datecell">Jan-May 2022</td>
