Corrected wrong link in Seminars

--- a/newsframe.html
+++ b/newsframe.html
@@ -16,7 +16,7 @@
 	<tbody>
 	<tr><td class="datecell">30.11.2022<br>15:00 CET</td>
 			<td width=70%><i>Invited Talk at the 
-			<a href="https://sites.google.com/view/2021onlinescwseminars" target="_blank">Research Seminar/Economics Lunch, University of Basel (Switzerland)</a>:</i> 
+			<a href="https://wwz.unibas.ch/de/economicslunch/" target="_blank">Research Seminar/Economics Lunch, University of Basel (Switzerland)</a>:</i> 
 			Learning Preferences from Response Times. 
 			</td><td class="linkcell">
 			</td>
