--- a/newsframe.html
+++ b/newsframe.html
@@ -21,13 +21,6 @@
 			</td><td class="linkcell">
 			</td>
 		</tr>
-		<tr><td class="datecell">15.11.2022<br>15:00 CET</td>
-			<td width=70%><i>Invited Talk at the 
-			<a href="https://sites.google.com/view/2021onlinescwseminars" target="_blank">Online Social Choice and Welfare Seminar</a>:</i> 
-			Voting for Compromises. 
-			</td><td class="linkcell">
-			</td>
-		</tr>
 				</tbody>
 </table>
 
@@ -35,6 +28,13 @@
 		    
 <table class="papertable">
 	<tbody>
+			<tr><td class="datecell">15.11.2022<br>15:00 CET</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://sites.google.com/view/2021onlinescwseminars/past-seminars/2022?pli=1" target="_blank">Online Social Choice and Welfare Seminar</a>:</i> 
+			Voting for Compromises. 
+			</td><td class="linkcell"><a href="https://drive.google.com/file/d/1xAqzQAExla6OomN8CXuLX-_MJARUBPhf/view?usp=sharing" target="_blank">Google Drive Recording</a>
+			</td>
+		</tr>
 	<tr><td class="datecell">14.10.2022<br>14:45 CET</td>
 			<td width=70%><i>Invited Talk at the 
 			<a href="https://lnc2.dec.ens.fr/en/research/teams/human-reinforcement-learning/neuro-economics-seminar-series-12930" target="_blank">nEuro-economics Seminar, ENS Paris</a>:</i> 
