--- a/newsframe.html
+++ b/newsframe.html
@@ -14,10 +14,10 @@
 		    
 <table class="papertable">
 	<tbody>
-	<tr><td class="datecell">30.11.2022<br>15:00 CET</td>
-			<td width=70%><i>Invited Talk at the 
-			<a href="https://wwz.unibas.ch/de/economicslunch/" target="_blank">Research Seminar/Economics Lunch, University of Basel (Switzerland)</a>:</i> 
-			Learning Preferences from Response Times. 
+	<tr><td class="datecell">19.12.2022<br>11:00 CET</td>
+			<td width=70%><i>Public Talk at the 
+			<a href="https://www.unia.es/es/la-unia/lecciones-unia" target="_blank">Lecciones UNIA, Universidad Internacional de Andaluc&iacute;a (Spain)</a>:</i> 
+			La Neuroeconom&iacute;a de los errores de decisi&oacute;n. 
 			</td><td class="linkcell">
 			</td>
 		</tr>
@@ -28,6 +28,13 @@
 		    
 <table class="papertable">
 	<tbody>
+	<tr><td class="datecell">30.11.2022<br>15:00 CET</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://wwz.unibas.ch/de/economicslunch/" target="_blank">Research Seminar/Economics Lunch, University of Basel (Switzerland)</a>:</i> 
+			Learning Preferences from Response Times. 
+			</td><td class="linkcell">
+			</td>
+		</tr>
 			<tr><td class="datecell">15.11.2022<br>15:00 CET</td>
 			<td width=70%><i>Invited Talk at the 
 			<a href="https://sites.google.com/view/2021onlinescwseminars/past-seminars/2022?pli=1" target="_blank">Online Social Choice and Welfare Seminar</a>:</i> 
@@ -140,6 +147,7 @@
 			Asia Conference on Business and Economic Studies (ACBES)</a> (Vietnam; Online):</i>
 			Stochastic Choice: Psychological Foundations and Economic Consequences. 
 			</td><td class="linkcell"><a href="https://www.ueh.edu.vn/images/upload/editer/1793%20The%203rd%20Asia%20Conference%20on%20Business%20and%20Economic%20Studies%20(ACBES%202021).jpg"  target="_blank">Announcement</a>
+			<br><a href="https://www.youtube.com/watch?v=5IZ5f54-fA4" target="_blank">YouTube Recording</a>
 			</td>
 			</tr>
 		<tr><td class="datecell">21.07.2021</td>
