--- a/papersframe.html
+++ b/papersframe.html
@@ -41,7 +41,21 @@
          <br><a href="https://doi.org/10.1007/s10683-021-09728-5" target="_blank">Journal Link</a>			
 			</td>
 		</tr>
-				<tr>
+		<tr>
+			<td>
+			<i>An Axiomatic Characterization of Bayesian Updating</i>, 
+			Carlos Al&oacute;s-Ferrer and Maximilian Mihm, <strong>Journal of Mathematical Economics</strong>, forthcoming.
+         </td><td class="linkcell"><a href="https://doi.org/10.1016/j.jmateco.2022.102799" target="_blank">Journal Link</a>			
+			</td>
+		</tr>
+	   <tr>
+			<td>
+			<i>Ethical Allocation of Scarce Vaccine Doses: The Priority-Equality Protocol</i>, 
+			Carlos Al&oacute;s-Ferrer, Jaume Garc&iacute;a-Segarra, and Miguel Gin&eacute;-Vilar, <strong>Frontiers in Public Health</strong>, forthcoming.
+         </td><td class="linkcell"><a href="https://www.frontiersin.org/articles/10.3389/fpubh.2022.986776" target="_blank">Journal Link</a>			
+			</td>
+		</tr>
+		<tr>
 			<td>
 			<i>Voting Under Time Pressure</i>, 
 			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Judgment and Decision Making</strong>, 17(5), September 2022, pp. 1072-1093.
