Updated links of MngSci 2023

--- a/homeframe.html
+++ b/homeframe.html
@@ -24,7 +24,7 @@ Universities of Vienna and Salamanca, and Visiting Professor at New York Univers
        
 <ul class="paperlist">
 <li class="paper"><em>Part-Time Bayesians:  Incentives and Behavioral
-Heterogeneity in Belief Updating</em>, C. Al&oacute;s-Ferrer and M. Garagnani, <strong>Management Science</strong>, forthcoming. <a href="files/BayesReinforceMS2022.pdf">Accepted Paper.</a></li>
+Heterogeneity in Belief Updating</em>, C. Al&oacute;s-Ferrer and M. Garagnani, <strong>Management Science</strong>, forthcoming. <a href="https://doi.org/10.1287/mnsc.2022.4584" target="_blank">Article in Advance.</a></li>
 <li class="paper"><em>Generous with individuals and Selfish to the Masses</em>, C. Al&oacute;s-Ferrer, J. Garc&iacute;a-Segarra, and A. Ritschel, <strong>Nature Human Behavior</strong>, 2022. <a href="https://rdcu.be/cqPad" target="_blank">SharedIt Link.</a></li>
 <li class="paper"><em>Time Will Tell: Recovering Preferences When Choices Are Noisy</em>, C. Al&oacute;s-Ferrer, E. Fehr, and N. Netzer. <strong>Journal of Political Economy</strong>, 2021. <a href="https://doi.org/10.1086/713732" target="_blank">Journal Link.</a></li>
 <li class="paper"><em>True to Which Self? Lay Rationalism and Decision Satisfaction in Self-Control Conflicts</em>, M.D. Kokkoris, E. Hoelzl,
