--- a/papersframe.html
+++ b/papersframe.html
@@ -30,7 +30,7 @@
 		<tr>
 			<td width=85%><i>Part-Time Bayesians: Incentives and Behavioral Heterogeneity in Belief Updating</i>, 
 			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Management Science</strong>, forthcoming.
-			</td><td class="linkcell"><a href="files/BayesReinforceMS2022.pdf">Accepted Version</a>
+			</td><td class="linkcell"><a href="https://doi.org/10.1287/mnsc.2022.4584" target="_blank">Article in Advance</a>
 			</td>
 		</tr>
 		<tr>
@@ -144,7 +144,9 @@
 			</ul>
 			</td><td class="linkcell"><a href="https://rdcu.be/cqPad" target="_blank">SharedIt Link</a>
 			<a href="https://doi.org/10.1038/s41562-021-01170-0" target="_blank">Journal Link</a>
-			<br><a href="https://www.psychologytoday.com/us/blog/decisions-and-the-brain/202207/why-we-are-all-crooked-bankers" target="_blank">Psychology Today</a></td>
+			<br><a href="https://www.psychologytoday.com/us/blog/decisions-and-the-brain/202207/why-we-are-all-crooked-bankers" target="_blank">Psychology Today</a>
+			<br><a href="https://nadaesgratis.es/admin/egoismo-eres-tu-robando-a-las-masas" target="_blank">Nada es Gratis</a></td>
+			
 		</tr>
 	</tbody>
 </table>
