--- a/WPsframe.html
+++ b/WPsframe.html
@@ -28,8 +28,8 @@
 		</tr>
 		<tr>
 			<td width=85%><i>Identifying Nontransitive Preferences</i>, 
-			Carlos Al&oacute;s-Ferrer, Ernst Fehr, and Michele Garagnani, last version: 2022.
-			</td><td class="linkcell"><i>In Progress</i><!--<a href="https://www.zora.uzh.ch/id/eprint/219280/" target="_blank">Working Paper</a>-->
+			Carlos Al&oacute;s-Ferrer, Ernst Fehr, and Michele Garagnani, last version: Jan. 2023.
+			</td><td class="linkcell"><a href="files/TWTTransitivity-WP2023.pdf">Working Paper</a><!--<a href="https://www.zora.uzh.ch/id/eprint/219280/" target="_blank">Working Paper</a>-->
 			</td>
 		</tr>
 		<tr>
