Updated IAREP Seminar and NeG post vaccines

--- a/homeframe.html
+++ b/homeframe.html
@@ -16,7 +16,8 @@ Universities of Vienna and Salamanca, and Visiting Professor at New York Univers
 <p>I am interested in how humans make economic decisions, ranging from decisions under risk to strategic decisions (game theory) and voting.
  My research methods include formal-analytical modelling of bounded rationality, behavioral experiments, and decision neuroscience ("neuroeconomics"). 
  I maintain a <a href="https://www.psychologytoday.com/intl/blog/decisions-and-the-brain" target="_blank">"Decisions and the Brain" blog at Psychology Today</a> and 
- a <a href="http://alosferrer.wordpress.com" target="_blank">personal blog at Wordpress</a>.</p>
+ a <a href="http://alosferrer.wordpress.com" target="_blank">personal blog at Wordpress</a>. I also co-organize the 
+ <a href="https://sites.google.com/view/economicpsychologyseminars" target="_blank">Economic Psychology Seminar</a> of the <a href="https://iarep.org/" target="_blank">IAREP</a>.</p>
 
        <h2>5 selected publications from the last 5 years</h2>
 
