--- a/newsframe.html
+++ b/newsframe.html
@@ -18,6 +18,27 @@
 				</tbody>
 </table>-->
 
+<h2>2023</h2>
+		    
+<table class="papertable">
+	<tbody>
+<tr><td class="datecell">24.01.2023</td>
+			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">PRESS:</b> Just posted in <a href="https://nadaesgratis.es/" target="_blank">Nada es Gratis</a>, the best-known Economics blog in Spanish:
+			 <a href="https://nadaesgratis.es/admin/el-injusto-reparto-de-las-vacunas-del-covid" target="_blank">El injusto reparto de las vacunas del Covid</a>.
+			</td><td class="linkcell"><a href="https://nadaesgratis.es/admin/el-injusto-reparto-de-las-vacunas-del-covid" target="_blank">Post</a>
+			</td>
+		</tr>
+		<tr><td class="datecell">23.01.2023</td>
+			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">NEWS:</b> We just started the (online) Economic Psychology Seminar series,
+			endorsed by the <a href="https://iarep.org/" target="_blank">IAREP</a>, that I coordinate together with <a href="https://people.ucd.ie/leonhard.lades"  target="_blank">Leonhard Lades</a>.
+			The first talk, by Ernst Fehr, was on <i>The fundamental properties, stability and predictive power of distributional preferences</i>. The next talk, by Cass Sunstein, is on February 13th.
+			</td><td class="linkcell"><a href="https://sites.google.com/view/economicpsychologyseminars" target="_blank">Economic Psychology Seminar</a>
+			</td>
+		</tr>
+		</tbody>
+</table>
+
+
 <h2>2022</h2>
 		    
 <table class="papertable">
