Corrected typo in WPs

--- a/WPsframe.html
+++ b/WPsframe.html
@@ -22,7 +22,7 @@
 	<tbody>
       <tr>
 			<td width=85%><i>Who Likes It More? Using Response Times To Elicit Group Preferences in Surveys</i>, 
-			Carlos Al&oacute;s-Ferrer, Ernst Fehr, and Michele Garagnani, last version: 2022.
+			Carlos Al&oacute;s-Ferrer and Michele Garagnani, last version: 2022.
 			</td><td class="linkcell"><a href="https://www.zora.uzh.ch/id/eprint/224551/" target="_blank">Working Paper</a>
 			</td>
 		</tr>
