Updated talks, corrected typos

--- a/newsframe.html
+++ b/newsframe.html
@@ -22,6 +22,40 @@
 		    
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">15.06.2023</td>
+			<td width=70%><i>Talk at the 
+			<a href="https://www.ugent.be/eb/economics/en/news-events/news/wrislab2023" target="_blank">Workshop RISLab on Cognitive Economics, Ghent University</a>:</i> 
+			Noise and Bias: The Determinants of Decisions Under Risk. 
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">10.06.2023</td>
+			<td width=70%><i>Editor's Report for the <i>Journal of Economic Psychology</i> at
+			<a href="https://iarepsabe2023.sciencesconf.org//" target="_blank">International Association for Research in Economic Psychology (IAREP) 2023 Conference</a> (Nice, France)</i>
+			</td><td></td>
+		</tr>
+<tr><td class="datecell">9.06.2023</td>
+			<td width=70%><i>Conference Talk at the
+			<a href="https://iarepsabe2023.sciencesconf.org//" target="_blank">International Association for Research in Economic Psychology (IAREP) 2023 Conference</a> (Nice, France):</i>
+			Errors, Fast and Slow.</td><td class="linkcell"></td>
+		</tr>
+<tr><td class="datecell">1.06.2023</td>
+			<td width=70%><i>Roundtable 
+			<a href="https://www.uzh.ch/de/events/agenda.html?event=53603" target="_blank">Mapping and modelling behaviours and economies</a>:</i>
+			Carlos Al&oacute;s-Ferrer, Steven Sloman, and Andrea Br&eacute;ard. Part of the <i>Ringvorlesung</i> &quot;Seeing and understanding the world differently.&quot;
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">09.03.2023<br>12:00 GST</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://cbid.org/events" target="_blank">C-BID Seminar Series, NYU Abu Dhabi</a>:</i> 
+			Learning Preferences from Response Times. 
+			</td><td class="linkcell">
+			</td></tr>
+	<tr><td class="datecell">07.02.2023<br>12:45 GST</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://cbid.org/events" target="_blank">Economics Brown Bag, NYU Abu Dhabi</a>:</i> 
+			Why is Choice Stochastic? 
+			</td><td class="linkcell">
+			</td></tr>
 <tr><td class="datecell">24.01.2023</td>
 			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">PRESS:</b> Just posted in <a href="https://nadaesgratis.es/" target="_blank">Nada es Gratis</a>, the best-known Economics blog in Spanish:
 			 <a href="https://nadaesgratis.es/admin/el-injusto-reparto-de-las-vacunas-del-covid" target="_blank">El injusto reparto de las vacunas del Covid</a>.
@@ -33,6 +67,12 @@
 			endorsed by the <a href="https://iarep.org/" target="_blank">IAREP</a>, that I coordinate together with <a href="https://people.ucd.ie/leonhard.lades"  target="_blank">Leonhard Lades</a>.
 			The first talk, by Ernst Fehr, was on <i>The fundamental properties, stability and predictive power of distributional preferences</i>. The next talk, by Cass Sunstein, is on February 13th.
 			</td><td class="linkcell"><a href="https://sites.google.com/view/economicpsychologyseminars" target="_blank">Economic Psychology Seminar</a>
+			</td>
+		</tr>
+		<tr><td class="datecell">Jan-May 2023</td>
+			<td width=70%><i>Visiting Professor at 
+			<a href="https://nyuad.nyu.edu/en/academics/divisions/social-science/faculty/carlos-alos-ferrer.html" target="_blank">New York University-Abu Dhabi</a> (United Arab Emirates).</i> 
+			</td><td>
 			</td>
 		</tr>
 		</tbody>
@@ -219,12 +259,12 @@
 			<a href="https://sabeconomics.org/iarep-sabe-2021/" target="_blank">International Association for Research in Economic Psychology (IAREP) 2021 Conference</a> (Online)</i>
 			</td><td></td>
 		</tr>
-		<tr><td class="datecell">15.11.2021</td>
+		<tr><td class="datecell">14.05.2021</td>
 			<td width=70%><i>Invited Talk at <a href="https://www.hw.ac.uk/ebs/" target="_blank">Edinburgh Business School / Heriot Watt University</a> (UK):</i> 
 			Stochastic Choice and Preference Reversals.</td>
 			<td class="linkcell"><a href="https://www.panmurehouse.org/programmes/economics-panmure/" target="_blank">Economics at Panmure</a></td>
 		</tr>
-		<tr><td class="datecell">15.11.2021</td>
+		<tr><td class="datecell">27.01.2021</td>
 			<td width=70%><i>Invited Talk at <a href="https://nyuad.nyu.edu/en/academics/divisions/social-science.html" target="_blank">NYU Abu Dhabi</a> (UAE):</i> 
 			Stochastic Choice and Preference Reversals.</td>
 			<td></td>
