Added planned talks

--- a/newsframe.html
+++ b/newsframe.html
@@ -22,6 +22,18 @@
 		    
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">25.12.2023<br>09:00 CET</td>
+			<td width=70%><i>Opening Keynote Talk, 
+			<a href="https://www.fuw-forum.ch/" target="_blank">KMU Forum Finanz und Wirtschaft</a> (GDI, R&uuml;schlikon, Switzerland):</i> 
+			Vom eigenen Gehirn ausgetrickst? Entscheidungsfehler bei F&uuml;hrungskr&auml;ften und wie man sie vermeidet. 
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">11.07.2023<br>14:15 CET</td>
+			<td width=70%><i>Invited Talk at the 
+			<a href="https://holgergerhardt.github.io/AppliedMicroWorkshop/2023-summer.html" target="_blank">Applied Microeconomics Workshop (briq/University of Bonn)</a>:</i> 
+			Learning Preferences from Response Times. 
+			</td><td class="linkcell">
+			</td></tr>
 <tr><td class="datecell">15.06.2023</td>
 			<td width=70%><i>Talk at the 
 			<a href="https://www.ugent.be/eb/economics/en/news-events/news/wrislab2023" target="_blank">Workshop RISLab on Cognitive Economics, Ghent University</a>:</i> 
